--- a/photograph.html
+++ b/photograph.html
@@ -76,23 +76,25 @@
 
         <section id="gallery" class="gallery">
             <h2>Gallery</h2>
-            <img src="https://via.placeholder.com/300" alt="Landscape" onclick="showGallerySection('landscape')">
-            <img src="https://via.placeholder.com/300" alt="Portraits" onclick="showGallerySection('portraits')">
-            <img src="https://via.placeholder.com/300" alt="Wildlife" onclick="showGallerySection('wildlife')">
+            <img src="Land1.jpg" alt="Landscape" onclick="showGallerySection('landscape')">
+            <img src="port1.jpg" alt="Portraits" onclick="showGallerySection('portraits')">
+            <img src="wild1.jpg" alt="Wildlife" onclick="showGallerySection('wildlife')">
         </section>
 
 
         <section id="landscape" class="gallery-section">
-            <h2>Landscape</h2>
-            <img src="https://via.placeholder.com/300" alt="Landscape Photo 1">
-            <img src="https://via.placeholder.com/300" alt="Landscape Photo 2">
+            <h2>landscapes</h2>
+            <img src="Land1.jpg" alt="Landscape Photo 1">
+            <img src="Land2.jpg" alt="Landscape Photo 2">
+            <img src="Land3.jpg" alt="Landscape Photo 3">
         </section>
 
 
         <section id="portraits" class="gallery-section">
             <h2>Portraits</h2>
-            <img src="https://via.placeholder.com/300" alt="Portrait Photo 1">
-            <img src="https://via.placeholder.com/300" alt="Portrait Photo 2">
+            <img src="port1.jpg" alt="Portrait Photo 1">
+            <img src="Port2.jpg" alt="Portrait Photo 2">
+            <img src="Port3.jpg" alt="Portrait Photo 3">
         </section>
 
 
