--- a/portraits.html
+++ b/portraits.html
@@ -9,8 +9,9 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: black;
             text-align: center;
+            color: white;
         }
         header {
             background-color: #333;
@@ -43,7 +44,7 @@
 <body>
     <header>
         <h1>Portrait Photography</h1>
-        <p><a href="index.html" style="color: #ddd; text-decoration: none;">Back to Home</a></p>
+        <p><a href="photograph.html" style="color: #ddd; text-decoration: none;">Back to Home</a></p>
     </header>
     <div class="gallery">
         <img src="port1.jpg" alt="Portrait Photo 1">
