--- a/landscapes.html
+++ b/landscapes.html
@@ -9,8 +9,9 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: black;
             text-align: center;
+            color: white;
         }
         header {
             background-color: #333;
@@ -43,15 +44,20 @@
 <body>
     <header>
         <h1>Landscape Photography</h1>
-        <p><a href="index.html" style="color: #ddd; text-decoration: none;">Back to Home</a></p>
+        <p><a href="photograph.html" style="color: #ddd; text-decoration: none;">Back to Home</a></p>
     </header>
     <div class="gallery">
-        <img src="https://via.placeholder.com/300" alt="Landscape Photo 1">
-        <img src="https://via.placeholder.com/300" alt="Landscape Photo 2">
-        <img src="https://via.placeholder.com/300" alt="Landscape Photo 3">
+        <img src="Land1.jpg" alt="Landscape Photo 1">
+        <img src="Land2.jpg" alt="Landscape Photo 2">
+        <img src="Land3.jpg" alt="Landscape Photo 3">
     </div>
+
+    <p>Landscapes show the untapped beauty of a place </p>
+
+
     <footer>
         <p>&copy; 2025 [Your Name]. All rights reserved.</p>
     </footer>
 </body>
 </html>
+ 
