--- a/photograph.html
+++ b/photograph.html
@@ -16,24 +16,38 @@
     </header>
     <nav>
         <a href="#about">About Me</a>
-        <a href="landscape.html">Landscape</a>
+        <a href="landscapes.html">Landscape</a>
         <a href="portraits.html">Portraits</a>
-        <a href="wildlife.html">Wildlife</a>
+    <a href="wildlife.html">Wildlife</a>
     </nav>
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
             <p>Hello! I'm George, a passionate photographer who loves capturing the beauty of the world through my lens.</p>
         </section>
-        <section class="gallery">
+
+        <section id="gallery">
+            <div class="section-title">
             <h2>Gallery</h2>
-            <a href="landscape.html"><img src="Land1.jpg" alt="Landscape"></a>
+            </div>
+
+            <div class="gallery">
+                <div class="gallery-item">
+                    <a href="landscapes.html">
+                    <img src="Land1.jpg" alt="Landscape">
+                </a>
+                <p class="description">Beautiful landscapes showcasing the beauty of the world. More photos can be found when you click the image.</p>
+
+            </div>
             <a href="portraits.html"><img src="port1.jpg" alt="Portraits"></a>
             <a href="wildlife.html"><img src="wild1.jpg" alt="Wildlife"></a>
+            </div>
         </section>
     </div>
+
     <footer>
         <p>&copy; 2025 [Your Name]. All rights reserved.</p>
     </footer>
+
 </body>
 </html>
