--- a/photograph.html
+++ b/photograph.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <h1>Welcome to My Photography Portfolio</h1>
+        <h1>G's Photography Services</h1>
     </header>
     <nav>
         <a href="#about">About Me</a>
@@ -24,6 +24,8 @@
         <section id="about">
             <h2>About Me</h2>
             <p>Hello! I'm George, a passionate photographer who loves capturing the beauty of the world through my lens.</p>
+            <br>
+            <p>More photos can be found by either clicking the photos or using the navigation bar.</p>
         </section>
 
         <section id="gallery">
@@ -36,13 +38,57 @@
                     <a href="landscapes.html">
                     <img src="Land1.jpg" alt="Landscape">
                 </a>
-                <p class="description">Beautiful landscapes showcasing the beauty of the world. More photos can be found when you click the image.</p>
+                <p class="description">Beautiful landscapes showcasing the beauty of the world.</p>
 
             </div>
-            <a href="portraits.html"><img src="port1.jpg" alt="Portraits"></a>
-            <a href="wildlife.html"><img src="wild1.jpg" alt="Wildlife"></a>
+
+            <div class="gallery-item">
+            <a href="portraits.html">
+                <img src="port1.jpg" alt="Portraits">
+            </a>
+            <p class="description"> Portraits showcase the beauty and and stories of the subject. They convey these stories in a way not most photographs show. </p>
+
+            </div>
+
+            <div class="gallery-item">
+            <a href="wildlife.html">
+                <img src="wild1.jpg" alt="Wildlife">
+            </a>
+            <p class="description">The aura of animals in the wild sometimes can't be told by word of mouth alone so a a few snaps here and there sometimes tell a story more than words can say.</p>
+
+
             </div>
         </section>
+    </div>
+
+    <h1>Contact Us</h1>
+    
+    <div class="form-container">
+        <div class="form-header">
+            <h2>Submit Your Work</h2>
+            <p>Share your best photos and details with us</p>
+        </div>
+        <form action="/submit" method="post">
+            <div class="form-group">
+                <label for="name">Your Name</label>
+                <input type="text" id="name" name="name" placeholder="Enter your name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Your Email</label>
+                <input type="email" id="email" name="email" placeholder="Enter your email" required>
+            </div>
+            <div class="form-group">
+                <label for="photo-title">Photo Title</label>
+                <input type="text" id="photo-title" name="photo-title" placeholder="Enter the title of your photo" required>
+            </div>
+            <div class="form-group">
+                <label for="description">Description</label>
+                <textarea id="description" name="description" placeholder="Write a brief description..." required></textarea>
+            </div>
+            <div class="form-footer">
+                <button type="submit">Submit</button>
+            </div>
+        </form>
     </div>
 
     <footer>
