--- a/photograph.html
+++ b/photograph.html
@@ -61,12 +61,20 @@
         </section>
     </div>
 
-    <h1>Contact Us</h1>
-    
+
+    <section>
+    <h1 class="contact">Contact Us</h1>
+    <p> Like our work? Get in touch</p>
+    <br>
+    <p>Reach us at gphotography@gmail.com</p>
+    </section>    
+
+
     <div class="form-container">
         <div class="form-header">
             <h2>Submit Your Work</h2>
             <p>Share your best photos and details with us</p>
+            
         </div>
         <form action="/submit" method="post">
             <div class="form-group">
