--- a/landscapes.html
+++ b/landscapes.html
@@ -44,7 +44,7 @@
 <body>
     <header>
         <h1>Landscape Photography</h1>
-        <p><a href="photograph.html" style="color: #ddd; text-decoration: none;">Back to Home</a></p>
+        <p><a href="photograph.html" style="color: rgb(69, 212, 255); text-decoration: none;">Back to Home</a></p>
     </header>
     <div class="gallery">
         <img src="Land1.jpg" alt="Landscape Photo 1">
@@ -60,4 +60,3 @@
     </footer>
 </body>
 </html>
- 
