--- a/landscapes.html
+++ b/landscapes.html
@@ -12,6 +12,7 @@
             background-color: black;
             text-align: center;
             color: white;
+            background-image: url("Land3.jpg");
         }
         header {
             background-color: #333;
@@ -35,7 +36,7 @@
         footer {
             text-align: center;
             padding: 1rem;
-            background-color: #333;
+            background-color: none;
             color: white;
             margin-top: 2rem;
         }
@@ -50,13 +51,15 @@
         <img src="Land1.jpg" alt="Landscape Photo 1">
         <img src="Land2.jpg" alt="Landscape Photo 2">
         <img src="Land3.jpg" alt="Landscape Photo 3">
+        <img src="land4.jpg" alt="Landscape Photo 4">
+        <img src="land5.jpg" alt="Landscape Photo 5">
     </div>
 
     <p>Landscapes show the untapped beauty of a place </p>
 
 
     <footer>
-        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2025 G's Photos. All rights reserved.</p>
     </footer>
 </body>
 </html>
