--- a/photograph.html
+++ b/photograph.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G's Photography services</title>
-    <link rel="stylesheet"href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 
 
     </head>
@@ -34,6 +34,7 @@
             </div>
 
             <div class="gallery">
+
                 <div class="gallery-item">
                     <a href="landscapes.html">
                     <img src="Land1.jpg" alt="Landscape">
@@ -58,15 +59,19 @@
 
 
             </div>
+
         </section>
+
     </div>
 
 
     <section>
-    <h1 class="contact">Contact Us</h1>
+
+    <h1 class="contact"> Contact Us </h1>
     <p> Like our work? Get in touch</p>
     <br>
     <p>Reach us at gphotography@gmail.com</p>
+    
     </section>    
 
 
@@ -100,7 +105,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2025 G's photos. All rights reserved.</p>
     </footer>
 
 </body>
