--- a/portraits.html
+++ b/portraits.html
@@ -44,7 +44,7 @@
 <body>
     <header>
         <h1>Portrait Photography</h1>
-        <p><a href="photograph.html" style="color: rgb(69,212,255); text-decoration: none;">Back to Home</a></p>
+        <p><a href="index.html" style="color: rgb(69,212,255); text-decoration: none;">Back to Home</a></p>
     </header>
     <div class="gallery">
         <img src="port1.jpg" alt="Portrait Photo 1">
@@ -52,7 +52,9 @@
         <img src="port3.jpg" alt="Portrait Photo 3">
     </div>
     <footer>
-        <p>&copy; 2025 G's photos.</p>
+       <p>&copy; 2025 G's photos.</p>
     </footer>
+
 </body>
+
 </html>
