--- a/wildlife.html
+++ b/wildlife.html
@@ -44,7 +44,7 @@
 <body>
     <header>
         <h1>Wildlife Photography</h1>
-        <p><a href="photograph.html" style="color: rgb(69, 212, 255); text-decoration: none;">Back to Home</a></p>
+        <p><a href="index.html" style="color: rgb(69, 212, 255); text-decoration: none;">Back to Home</a></p>
     </header>
     <div class="gallery">
         <img src="wild1.jpg" alt="Portrait Photo 1">
@@ -59,5 +59,7 @@
     <footer>
         <p>&copy; 2025 G's photos. </p>
     </footer>
+
 </body>
+
 </html>
