--- a/index.html
+++ b/index.html
@@ -20,12 +20,23 @@
         <a href="portraits.html">Portraits</a>
     <a href="wildlife.html">Wildlife</a>
     </nav>
+
+
     <div class="container">
         <section id="about">
-            <h2>About Me</h2>
-            <p>Hello! I'm George, a passionate photographer who loves capturing the beauty of the world through my lens.</p>
-            <br>
-            <p>More photos can be found by either clicking the photos or using the navigation bar.</p>
+            <h2 id="about-title">About Me</h2>
+            <div class="profile">
+                <img src="me.jpg" alt="Profile picture of George" class="profile-picture">
+                <div class="profile-text">
+                    <p>Hello! I'm George, a passionate photographer who loves capturing the beauty of the world through my lens.</p>
+                    <p>More photos can be found by either clicking the photos or using the navigation bar.</p>
+                    <br>
+                    <p>Click on the photos to view more of my work.</p>     
+
+
+                </div>
+           
+            </div>
         </section>
 
         <section id="gallery">
